2009-02-02  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects.Gui.Dialogs/PolicyOptionsPanel.cs:
	  Workaround for GTK#/mcs delegate issue. Hopefully fixes Bug
	  471482 - Unhandled exception with Standard Header policy.

2009-02-02  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/objects.xml: Flush.

2009-02-02  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Gui.Dialogs/PolicyOptionsPanel.cs: Fix
	  warning.

	*
	  MonoDevelop.Projects.Gui.Dialogs.OptionPanels/NamespaceSynchronisationPanel.cs:
	  Added support for resource naming policy.

2009-02-02  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Gui.addin.xml: Moved namig panel to a
	  new Source Code section.

2009-01-30  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects.Gui.Dialogs/PolicyOptionsPanel.cs: Display named
	policies list when editing policy sets.

2009-01-30  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects.Gui.addin.xml: Add extension point for defaul
	policies panels. Add the .NET naming panel to this extension point.

	* Makefile.am:
	* MonoDevelop.Projects.Gui.mdp: Updated.

	* MonoDevelop.Projects.Gui.Dialogs/DefaultPolicyOptionsDialog.cs: Add a
	dialog for editing default policies.

	* MonoDevelop.Projects.Gui.Dialogs/PolicyOptionsPanel.cs: Add support
	for editing policy sets.

2009-01-30  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects.Gui.Dialogs.OptionPanels/NamespaceSynchronisationPanel.cs:
	Disable GUI for resource style names as it's not implemented yet.
	Comment out cosmetic properties not available in GTK 2.8.

2009-01-29  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Gui.Dialogs/PolicyOptionsPanel.cs: Workaround for
	JIT bug.

2009-01-28  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects.Gui.Dialogs/PolicyOptionsPanel.cs: Don't use
	SingleOrDefault as this was crashing the 2.4 JIT.
